infer/tests/codetoanalyze/cpp/errors/types/inheritance_field.cpp
../../frontend/types/inheritance_field.cpp